--- a/server/static/main.css
+++ b/server/static/main.css
@@ -178,7 +178,8 @@ input, textarea {
     margin: auto;
     width: 80vw;
     min-height: 32px;
-    line-height: 32px;
+    line-height: 32px !important;
+    /*height: 42px !important;*/
     border: 1px solid rgb(222, 222, 223);
     border-radius: 4px;
     padding: 4px 8px;
@@ -187,11 +188,12 @@ input, textarea {
 
 #stop-generating {
     /*display: none;*/
-    right: 10%;
+    right: 12%;
     background-color: white;
     border: none;
     position: absolute;
     bottom: 10px;
+    /*display: none !important;*/
 }
 
 button:disabled {
