--- a/server/templates/common/popups/settings.html
+++ b/server/templates/common/popups/settings.html
@@ -119,6 +119,15 @@
                 <div class="param-help">
                     Set grammar for grammar-based sampling (default: no grammar)
                 </div>
+                <div>
+                    <label for="system_prompt">System prompt:</label>
+                    <textarea id="system_prompt" name="system_prompt">
+
+                    </textarea>
+                </div>
+                <div class="param-help">
+                    Set the system prompt for the conversation
+                </div>
 <!--                <div>-->
 <!--                    <label for="n_probs">N Probs:</label>-->
 <!--                    <input type="number" id="n_probs" name="n_probs" value="0"><br>-->
