--- a/server/templates/common/popups/settings.html
+++ b/server/templates/common/popups/settings.html
@@ -4,7 +4,7 @@
         <a class="close" href="#">&times;</a>
         <div class="scroll-content">
 
-            <form id="settings-form">
+            <form id="settings-form" class="popup-form">
                 <div>
                     <label for="n_predict">n_predict:</label>
                     <input type="number" id="n_predict" name="n_predict" value="1024"><br>
