--- a/server/static/main.css
+++ b/server/static/main.css
@@ -223,13 +223,13 @@ button:disabled {
     display: none;
 }
 
-.input-box:focus,
-input:focus,
-select:focus,
-textarea:focus,
-button:focus {
-    outline: none;
-}
+/*.input-box:focus,*/
+/*input:focus,*/
+/*select:focus,*/
+/*textarea:focus,*/
+/*button:focus {*/
+/*    outline: none;*/
+/*}*/
 
 
 .loading {
@@ -388,11 +388,11 @@ a:visited {
   background: #fff;
   border-radius: 5px;
   width: 60vw;
-    max-width: 600px;
+  max-width: 600px;
   position: relative;
   /*transition: all 5s ease-in-out;*/
-    max-height: 80vh;
-    overflow: hidden;
+  max-height: 80vh;
+  overflow: hidden;
 
 }
 
