--- a/server/static/js/app.css
+++ b/server/static/js/app.css
@@ -1,4 +1,4 @@
-/* node_modules/highlight.js/styles/github.css */
+/* node_modules/highlight.js/styles/github-dark.css */
 pre code.hljs {
   display: block;
   overflow-x: auto;
@@ -8,8 +8,8 @@ code.hljs {
   padding: 3px 5px;
 }
 .hljs {
-  color: #24292e;
-  background: #fff;
+  color: #c9d1d9;
+  background: #0d1117;
 }
 .hljs-doctag,
 .hljs-keyword,
@@ -18,13 +18,13 @@ code.hljs {
 .hljs-template-variable,
 .hljs-type,
 .hljs-variable.language_ {
-  color: #d73a49;
+  color: #ff7b72;
 }
 .hljs-title,
 .hljs-title.class_,
 .hljs-title.class_.inherited__,
 .hljs-title.function_ {
-  color: #6f42c1;
+  color: #d2a8ff;
 }
 .hljs-attr,
 .hljs-attribute,
@@ -36,65 +36,65 @@ code.hljs {
 .hljs-selector-class,
 .hljs-selector-id,
 .hljs-variable {
-  color: #005cc5;
+  color: #79c0ff;
 }
 .hljs-meta .hljs-string,
 .hljs-regexp,
 .hljs-string {
-  color: #032f62;
+  color: #a5d6ff;
 }
 .hljs-built_in,
 .hljs-symbol {
-  color: #e36209;
+  color: #ffa657;
 }
 .hljs-code,
 .hljs-comment,
 .hljs-formula {
-  color: #6a737d;
+  color: #8b949e;
 }
 .hljs-name,
 .hljs-quote,
 .hljs-selector-pseudo,
 .hljs-selector-tag {
-  color: #22863a;
+  color: #7ee787;
 }
 .hljs-subst {
-  color: #24292e;
+  color: #c9d1d9;
 }
 .hljs-section {
-  color: #005cc5;
+  color: #1f6feb;
   font-weight: 700;
 }
 .hljs-bullet {
-  color: #735c0f;
+  color: #f2cc60;
 }
 .hljs-emphasis {
-  color: #24292e;
+  color: #c9d1d9;
   font-style: italic;
 }
 .hljs-strong {
-  color: #24292e;
+  color: #c9d1d9;
   font-weight: 700;
 }
 .hljs-addition {
-  color: #22863a;
-  background-color: #f0fff4;
+  color: #aff5b4;
+  background-color: #033a16;
 }
 .hljs-deletion {
-  color: #b31d28;
-  background-color: #ffeef0;
+  color: #ffdcd7;
+  background-color: #67060c;
 }
 /*! Bundled license information:
 
-highlight.js/styles/github.css:
+highlight.js/styles/github-dark.css:
   (*!
-    Theme: GitHub
-    Description: Light theme as seen on github.com
+    Theme: GitHub Dark
+    Description: Dark theme as seen on github.com
     Author: github.com
     Maintainer: @Hirse
     Updated: 2021-05-15
   
-    Outdated base version: https://github.com/primer/github-syntax-light
+    Outdated base version: https://github.com/primer/github-syntax-dark
     Current colors taken from GitHub's CSS
   *)
 */
