many UI and internal changes

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -27,7 +27,9 @@
     <div id="chat">
 
     </div>
-    <div class="chat-instruction">Chat here</div>
+    <div class="chat-instruction">
+        <div>Chat here</div>
+    </div>
     <div class="chat-input">
         <div id="input-box" class="input-box" contenteditable="true" data-text="Type here..."></div>
         <button id="stop-generating" disabled="disabled">
