--- a/server/static/main.css
+++ b/server/static/main.css
@@ -162,9 +162,26 @@ pre code {
     bottom: 96px;
     font-size: 0.8rem;
     color: rgb(52, 53, 65);
-    width: calc(100% - var(--sidebar-width));
-    margin-left: 24px;
+    /*width: calc((100vw - var(--sidebar-width)) * 0.8);*/
+    width: 100vw;
+    background-color: rgba(100, 0, 0 ,0.3);
+    z-index: 88;
+    left: 0;
+    /*margin-left: var(--sidebar-width);*/
+
+    /*left: calc(var(--sidebar-width));*/
+    /*margin-left: calc();*/
+    /* The width is given w = 100% - sbw */
+    /* the inner width is suppoeszed to be 80% */
+    /* so the margin is half of the difference */
+    /*left: var(--sidebar-width);*/
+    /*margin-left: 0;*/
+    /*margin-left: calc((100vw - ((100vw - var(--sidebar-width)) * 0.8))/2);*/
     /*margin: auto;*/
+}
+.chat-instruction > div {
+    width: calc(100% - var(--sidebar-width));
+    margin: auto;
 }
 
 
@@ -344,7 +361,7 @@ a:visited {
     z-index: 2;
     display: flex;
     flex-direction: column;
-    /*opacity: 0.5;*/
+    opacity: 0.5;
 }
 .sidebar div {
     margin: 8px;
