add a system prompt

--- a/server/templates/common/popups/settings.html
+++ b/server/templates/common/popups/settings.html
@@ -96,14 +96,14 @@
 <!--                </div>-->
                 <div>
                     <label for="assistant_name">Assistant name:</label>
-                    <input type="text" id="assistant_name" name="assistant_name" value="Llama"><br>
+                    <input type="text" id="assistant_name" name="assistant_name" value="{{assistant_name}}"><br>
                 </div>
                 <div class="param-help">
                     The bot's name is necessary for each customer to generate the prompt
                 </div>
                 <div>
                     <label for="anti_prompt">User name (Anti prompt):</label>
-                    <input type="text" id="anti_prompt" name="anti_prompt" value="User"><br>
+                    <input type="text" id="anti_prompt" name="anti_prompt" value="{{anti_prompt}}"><br>
                 </div>
                 <div class="param-help">
                     Specify the word you want to use to instruct the model to stop
