--- a/server/static/main.css
+++ b/server/static/main.css
@@ -346,7 +346,7 @@ a:visited {
     z-index: 2;
     display: flex;
     flex-direction: column;
-    opacity: 0.5;
+    /*opacity: 0.5;*/
 }
 .sidebar div {
     margin: 8px;
