--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -10,7 +10,8 @@
 
             <ul>
                 <li>History</li>
-                <li>Collections</li>
+                <li>Collections (LLM Search Engine - RAG)</li>
+                <li>Image understanding</li>
             </ul>
         </div>
         <div class="sidebar-footer">
