improve parsing of json messages

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -3,7 +3,7 @@
 {% block sidebar %}
     <div class="sidebar">
         <div>
-            <button class="sidebar-button" id="reset-button">New Chat</button>
+            <a class="sidebar-button" href="/" id="reset-button">New Chat</a>
         </div>
         <div>
             More functionality coming here soon
