--- a/server/static/main.css
+++ b/server/static/main.css
@@ -375,7 +375,7 @@ a:visited {
     margin-left: auto !important;
     margin-right: 0 !important;
 }
-#logout-button:visited {
+.sidebar-button:visited {
     color: unset;
 }
 
