--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -5,11 +5,13 @@
         <div>
             <a class="sidebar-button" href="/" id="reset-button">New Chat</a>
         </div>
-        <div>
-            More functionality coming here soon
 
+        <ul id="history">
+        </ul>
+
+        <div>
+            <strong>Todos:</strong>
             <ul>
-                <li>History</li>
                 <li>Collections (LLM Search Engine - RAG)</li>
                 <li>Image understanding</li>
             </ul>
