--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -6,14 +6,19 @@
             <a class="sidebar-button" href="/" id="reset-button">New Chat</a>
         </div>
 
-        <ul id="history">
-        </ul>
+        <div id="history-div">
+            <strong>History</strong>
 
-        <div>
-            <strong>Todos:</strong>
+            <ul id="history">
+            </ul>
+        </div>
+
+        <div id="todos-div">
+            <strong>Todos</strong>
             <ul>
                 <li>Collections (LLM Search Engine - RAG)</li>
                 <li>Image understanding</li>
+                <li>Rename history items with the help of the LLM</li>
             </ul>
         </div>
         <div class="sidebar-footer">
