--- a/server/static/main.css
+++ b/server/static/main.css
@@ -408,14 +408,38 @@ a:visited {
  padding-top: 4px;
 }
 #history {
-    padding-left: 8px;
+    padding-left: 0;/
     list-style-type: none;
-    border-bottom: 1px solid white;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    /*border-bottom: 1px solid white;*/
+    /*padding-top: 32px;*/
+    /*padding-bottom: 32px;*/
 }
 #history a {
-    color: rgb(183, 183, 193);;
+    color: rgb(183, 183, 193);
+}
+
+#history li {
+    display: flex;
+    align-items: baseline;
+    padding: 0;
+}
+
+
+#history-div, #todos-div {
+    margin-top: 48px;
+}
+.delete-history-item {
+    margin-left: auto;
+    border: none;
+    background-color: unset;
+    color: rgb(183, 183, 193);
+    cursor: pointer;
+    font-size:1.2rem;
+}
+.history-item-link {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .overlay {
