- valid requirements.txt - massive cleanup

--- a/server/templates/common/popups/upload.html
+++ b/server/templates/common/popups/upload.html
@@ -6,12 +6,14 @@
             <div>
                 <p>
                     You can add context to the current prompt either by just adding a file (must be shorter than ~1500
-                    words).
+                    words). Once uploaded you can simply chat with the bot by referring to the 'context'.
+                    <strong>Example</strong>: Summarize / Translate the context
                 </p>
 
                 <p>
                     If you want to add several documents or larger files or being able to reuse an uploaded file, you
-                    can add it to a collection. TODO More help
+                    can add it to a collection.
+                    <strong>TODO</strong>
                 </p>
             </div>
             <br>
