--- a/server/templates/common/popups/settings.html
+++ b/server/templates/common/popups/settings.html
@@ -138,7 +138,7 @@
                 </div>
                 <div>
                     <label for="grammar">Grammar:</label>
-                    <textarea id="grammar" name="grammar" rows="4" cols="50">bboboboo</textarea>
+                    <textarea id="grammar" name="grammar" rows="4" cols="50"></textarea>
                 </div>
                 <div class="param-help">
                     Set grammar for grammar-based sampling (default: no grammar)
