--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -16,6 +16,7 @@
         <div id="todos-div">
             <strong>Todos</strong>
             <ul>
+                <li>Edit items in the history</li>
                 <li>Collections (LLM Search Engine - RAG)</li>
                 <li>Image understanding</li>
                 <li>Rename history items with the help of the LLM</li>
@@ -46,26 +47,6 @@
         </button>
         <div class="footer">
             <div class="footer-buttons">
-<!--                <strong>-->
-<!--                    <a href="/embeddings">Embeddings-->
-<!--                    {% if embeddings is defined and embeddings|length > 0 %}-->
-<!--                        ({{ embeddings|length }} open)-->
-<!--                    {% endif %}-->
-<!--                    </a>-->
-<!--                </strong>:-->
-
-<!--                &nbsp;-->
-<!--                <a href="#popup2" id="document-qa-button">PDF</a>-->
-<!--                &nbsp;|&nbsp;-->
-<!--                <a href="#popup3" id="source-qa-button">Source code</a>-->
-<!--                &nbsp;|&nbsp;-->
-<!--                <a href="#popup4" id="sql-qa-button">SQL</a>-->
-<!--                &nbsp;|&nbsp;-->
-<!--                <a href="/translate">Translate</a>-->
-<!--                <div>-->
-<!--                    <strong>Timing: </strong>-->
-
-<!--                </div>-->
                 <!--suppress HtmlUnknownAnchorTarget -->
                 <a href="#popupUpload" id="translate-button">
                     Upload
@@ -74,7 +55,6 @@
                 <span id="timing-info"></span>
                 <!--suppress HtmlUnknownAnchorTarget -->
                 <a href="#popupSettings" id="settings-button">Settings</a>&nbsp;
-<!--                |-->
                 <!--suppress HtmlUnknownAnchorTarget -->
                 <a href="#popupHelp" id="help-button">Help</a>
             </div>
