--- a/server/static/main.css
+++ b/server/static/main.css
@@ -346,6 +346,8 @@ a:visited {
     z-index: 2;
     display: flex;
     flex-direction: column;
+
+
     /*opacity: 0.5;*/
 }
 .sidebar div {
@@ -413,6 +415,9 @@ a:visited {
     /*border-bottom: 1px solid white;*/
     /*padding-top: 32px;*/
     /*padding-bottom: 32px;*/
+    max-height: calc(100vh - 300px);
+    /*border: 1px solid rebeccapurple;*/
+    overflow-y: auto;
 }
 #history a {
     color: rgb(183, 183, 193);
