--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -16,12 +16,13 @@
         <div id="todos-div">
             <strong>Todos</strong>
             <ul>
-                <li><strike>Edit items in the history</strike></li>
-                <li><strike>History of conversations</strike></li>
+                <li class="strike">Edit items in the history</li>
+                <li class="strike">History of conversations</li>
+                <li class="strike">Reapply code highlighting when loading history</li>
                 <li>Collections (LLM Search Engine - RAG)</li>
-                <li>Up and down buttons, so a RLHF dataset can be created</li>
                 <li>Rename history items with the help of the LLM</li>
                 <li>Image understanding</li>
+                <li>Up and down buttons, so a RLHF dataset can be created</li>
             </ul>
         </div>
         <div class="sidebar-footer">
