--- a/server/static/main.css
+++ b/server/static/main.css
@@ -418,7 +418,7 @@ a:visited {
  padding-top: 4px;
 }
 #history {
-    padding-left: 0;/
+    padding-left: 0;
     list-style-type: none;
     /*border-bottom: 1px solid white;*/
     /*padding-top: 32px;*/
