--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -66,6 +66,9 @@
 
 
     </div>
+    <div id="scrolldown-button-div">
+        <button id="scrolldown-button">↓</button>
+    </div>
 {% endblock content %}
 
 
